update all projet